RESOLVED FIXED204164
Fix GTK/WPE builds after enabling POINTER_EVENTS support
https://bugs.webkit.org/show_bug.cgi?id=204164
Summary Fix GTK/WPE builds after enabling POINTER_EVENTS support
Nikolas Zimmermann
Reported 2019-11-13 10:38:46 PST
Fix GTK/WPE builds after enabling POINTER_EVENTS support
Attachments
Patch (1.75 KB, patch)
2019-11-13 10:40 PST, Nikolas Zimmermann
no flags
Nikolas Zimmermann
Comment 1 2019-11-13 10:40:41 PST
WebKit Commit Bot
Comment 2 2019-11-13 22:59:03 PST
Comment on attachment 383470 [details] Patch Clearing flags on attachment: 383470 Committed r252451: <https://trac.webkit.org/changeset/252451>
WebKit Commit Bot
Comment 3 2019-11-13 22:59:04 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2019-11-13 23:00:31 PST
Note You need to log in before you can comment on or make changes to this bug.