Fix GTK/WPE builds after enabling POINTER_EVENTS support https://bugs.webkit.org/show_bug.cgi?id=204164

Patch by Nikolas Zimmermann <nzimmermann@igalia.com> on 2019-11-13
Reviewed by Žan Doberšek.

Our g++ 8.3.0 yields "error: call to non-constexpr function
WTFReportAssertionFailure" when compiling rendering/EventRegion.cpp
since r252366.

Turn both toTouchAction() / toIndex() into static inline instead of
constexpr functions to appease g++ 8.3.0.

* rendering/EventRegion.cpp:
(WebCore::toIndex):
(WebCore::toTouchAction):

Canonical link: https://commits.webkit.org/217491@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252451 268f45cc-cd09-0410-ab3c-d52691b4dbfc